--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
-.App {
-  text-align: center;
+h1 {
+  font-size: 37px;
+  font-weight: 600;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+p {
+  font-size: 22px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.carousel {
+  margin-top: 50px;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap: 60px;
 }
 
-.App-link {
-  color: #61dafb;
+.card {
+  width: 200px;
+  background-color: transparent;
+  box-shadow: 0px 5px 20px 2px #ddd;
+  padding-top: 30px;
+  border-radius: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+img {
+  width: 100px;
+  height: 100px;
+}
+
+button {
+  font-size: 20px;
+  color: #808080;
+  background-color: transparent;
+  border: none;
+  border-radius: 50%;
+  padding: 10px 14px;
+  box-shadow: 0px 5px 15px #ccc;
+  cursor: pointer;
+}
+
+.carousel + button {
+  margin-top: 60px;
 }
