--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,64 @@
+main {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 30px;
+}
+
 h1 {
-  font-size: 37px;
+  font-size: 36px;
   font-weight: 600;
 }
 
 p {
-  font-size: 22px;
+  margin-top: 20px;
+  font-size: 21px;
 }
 
 .carousel {
   margin-top: 50px;
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
   gap: 60px;
 }
 
-.card {
-  width: 200px;
-  background-color: transparent;
-  box-shadow: 0px 5px 20px 2px #ddd;
-  padding-top: 30px;
-  border-radius: 20px;
+.carousel-main {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 60px;
 }
 
-img {
+.carousel-card {
+  width: 240px;
+  background-color: transparent;
+  box-shadow: 0px 5px 20px 2px #ddd;
+  padding: 30px 10px;
+  border-radius: 20px;
+  text-align: center;
+}
+
+.carousel-card > img {
   width: 100px;
   height: 100px;
 }
 
 button {
   font-size: 20px;
-  color: #808080;
+  color: #6d6d6d;
   background-color: transparent;
   border: none;
   border-radius: 50%;
-  padding: 10px 14px;
+  padding: 12px;
   box-shadow: 0px 5px 15px #ccc;
   cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .carousel + button {
